beginning product daily calendar view with m/d/y router params

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -2,9 +2,9 @@ template(name='comments')
     .ui.fluid.accordion
         .active.title
             .ui.grey.header
-                i.chat.icon
+                i.chat.outline.icon
                 //- +i name='chat'
-                |Comments
+                |comments
         .active.content
             if currentUser
                 .ui.fluid.icon.input
