--- a/client/reservation.jade
+++ b/client/reservation.jade
@@ -61,3 +61,6 @@ template(name='reservation_product_template')
             .ui.large.label #{this}
         |!{description}
         
+
+template(name='product_day_view')
+    .ui.header product day view
