--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -47,7 +47,7 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .eleven.wide.column.scrolling
+            .eleven.wide.column
                     //- .ui.inline.header
                     //-     |sort by
                     //- .ui.button
