--- a/client/dashboard.jade
+++ b/client/dashboard.jade
@@ -26,9 +26,13 @@ template(name='dashboard')
 template(name='product_card')                
     .ui.card
         .content
-            a.header(href="/shop/#{_id}/view")
+            a(href="/shop/#{_id}/view")
                 img.ui.avatar.image(src="{{c.url picture width=100 height=100 gravity='face' crop='crop'}}")
-                | #{title}
+                .ui.small.inline.header
+                    | #{title}
+            .ui.small.header #{reader_count}
+            .ui.small.header #{points} likes
+            .ui.small.header #{transactions_count} transactions count
 
 
 template(name='product_stats')
@@ -95,3 +99,18 @@ template(name='todays_schedule')
         .ui.small.header events
         //- each today_events
         //-     .ui.header #{title} #{long_timestamp} #{_author_username}
+
+
+
+
+template(name='games')
+    .ui.stackable.padded.grid
+        .row
+            .sixteen.wide.column
+                .ui.header 
+                    i.dice.icon
+                    |games
+        .row
+            .four.wide.column
+                .ui.segment
+                    a.ui.header(href="/game/picker") picker
