--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -12,19 +12,19 @@ template(name='login')
                     .ui.inline.small.grey.header 
                         //- +i name='user'
                         i.user.icon
-                        |Username
+                        |username
                     input.username(type='text')
                 .ui.fluid.large.input(class=login_class)
                     .ui.inline.small.grey.header 
                         i.lock.icon
-                        | Password
+                        | password
                     input.password(type='password')
                 //- if username
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
                         i.sign.in.alternate.icon
                         //- +i name='enter-2' classes='ui mini inline image'
-                        |Login
+                        |login
                         | #{username}
                         //- i.right.chevron.icon
                 else
@@ -34,13 +34,13 @@ template(name='login')
                             a.ui.basic.button(href='/register')
                                 i.user.plus.icon
                                 //- +i name='enter-2' classes='ui mini inline image'                    
-                                | Register
+                                | register
                 .ui.center.aligned.basic.segment    
                     a.ui.large.basic.button(href='/forgot_password')
                         //- +i name='forgot-password' classes='ui mini inline image'                    
                         i.refresh.icon
-                        |Forgot Password
+                        |forgot password
                     a.ui.large.basic.button(href='/register') 
                         //- +i name='add-user-male' classes='ui mini inline image'                    
                         i.user.plus.icon
-                        |Register
+                        |register
