--- a/components/product_day.jade
+++ b/components/product_day.jade
@@ -16,4 +16,12 @@ template(name='product_day')
                     //- +upcoming_day data=this
 
 template(name='hour_reservation')
-    .ui.header res exists
+    .ui.green.segment
+        .ui.inline.header reserved
+        +author_info
+        .ui.large.basic.label #{_author_username}
+        if is_author
+            +text_edit key='notes' direct=true
+            +remove_button
+        else
+            +text_view key='notes' direct=true
