--- a/client/profile.jade
+++ b/client/profile.jade
@@ -586,7 +586,7 @@ template(name='role_switcher')
         .ui.grey.inline.center.aligned.small.header 
             //- +i name='anonymous-mask'
             i.shield.icon(title='role switcher')
-            |#{username} Role Switcher
+            |#{username} role switcher
         //- if is_eric
         //-     +user_array_element_toggle key='roles' value='dev' user=currentUser
         //- if current_user
