--- a/client/fields.jade
+++ b/client/fields.jade
@@ -656,6 +656,8 @@ template(name='time_view')
                 //- +i name=icon
             if title
                 |#{title}
+            else if label
+                |#{label}
             else if key
                 |#{key}
             else
