--- a/client/shop.jade
+++ b/client/shop.jade
@@ -96,7 +96,7 @@ template(name='shop')
                                 |most viewed
                             each most_viewed
                                 +product_header
-                                .meta #{views}
+                                .meta #{reader_count}
                     .four.wide.column
                         .ui.segment
                             .ui.header 
