--- a/client/credit.jade
+++ b/client/credit.jade
@@ -5,6 +5,11 @@ template(name='credit')
                 i.wallet.icon
                 |credit
             .ui.header my credit #{currentUser.credit}
+            .ui.header
+                i.lightbulb.icon
+                |ideas
+            with currentUser
+                +textarea_edit key='credit_notes' direct=true
         .twelve.wide.column
             .ui.header my credit $#{currentUser.credit}
             .ui.button.add_credit add credit
